syntax = "proto3";

import "google/protobuf/empty.proto";

package airgp.game.v1;

// gRPC Service Definition
service GameService {
  rpc CreateGame(CreateGameRequest) returns (google.protobuf.Empty);
  rpc StartGame(StartGameRequest) returns (google.protobuf.Empty);
  rpc SubmitTurn(SubmitTurnRequest) returns (google.protobuf.Empty);
  rpc CreateTurn(CreateTurnRequest) returns (google.protobuf.Empty);
}

// Request/Response Messages for CreateGame
message CreateGameRequest {
  string game_id = 1;
  string game_prompt = 2;
  int32 max_scenes_number = 3;
  repeated NewCharacter characters = 4;
  
  message NewCharacter {
    string name = 1;
    string character_prompt = 2;
  }
}

// Request/Response Messages for StartGame  
message StartGameRequest {
  string game_id = 1;
}

// Request/Response Messages for SubmitTurn
message SubmitTurnRequest {
  string game_id = 1;
  repeated CharacterAction character_actions = 2;
  
  message CharacterAction {
    string character_name = 1;
    string chosen_option = 2;
  }
}

// Request/Response Messages for CreateTurn
message CreateTurnRequest {
  string game_id = 1;
} 